fix: align logo to the left

--- a/app/src/styles/Homepage.module.scss
+++ b/app/src/styles/Homepage.module.scss
@@ -4,6 +4,7 @@
 .background {
   position: absolute;
   top: 0;
+  left: 0;
   z-index: -1;
 }
 
